* Removed `minSize` setting for Gremlin Driver connection pool since connections are now short-lived HTTP connections
* Added `idleConnectionTimeout` setting for Gremlin Driver and automatic closing of idle connections
* Enabled TCP Keep-Alive in GremlinServer.
* Updated Python GLV examples to use HTTP and to run as part of the integration tests.

== TinkerPop 3.8.0 (Grix Greven)

image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/images/gremlin-67.png[width=185]

[[release-3-8-1]]
=== TinkerPop 3.8.1 (NOT OFFICIALLY RELEASED YET)

This release also includes changes from <<release-3-7-6, 3.7.6>>.


[[release-3-8-0]]
=== TinkerPop 3.8.0 (Release Date: November 12, 2025)

This release also includes changes from <<release-3-7-5, 3.7.5>>.

* Added a Gremln MCP server.
* Added the Air Routes 1.0 dataset to the set of available samples packaged with distributions.
* Added a minimal distribution for `tinkergraph-gremlin` using the `min` classifier that doesn't include the sample datasets.
* Removed `AggregateLocalStep` and `aggregate(Scope, String)`, and renamed `AggregateGlobalStep` to `AggregateStep`.
* Removed `store()` in favor of using `local(aggregate())`.
* Removed Vertex/ReferenceVertex from grammar. Use vertex id in traversals now instead.
* Removed `has(key, traversal)` and `has(T, traversal)` options for `has()` step.
* Fixed bug where `InlineFilterStrategy` could add an empty `has()`.
* Normalized dotnet `Element.properties` to lists.
* Normalized python and javascript `Element.properties` to lists.
* Renamed `none()` step to `discard()`.
* Repurposed `none()` step as a list filtering step with the signature `none(P)`.
* Modified mathematical operators to prevent overflows in steps such as `sum()` and 'sack()' to prefer promotion to the next highest number type.
* Modified `local()` to be "object-local" rather than "traverser-local".
* Added `DateTime` ontop of the existing 'datetime' grammar.